<resources>
    <string name="app_name">gas indicator</string>
    <string name="login_name_app">Gas indicator</string>
    <string name="login_email">email</string>
    <string name="login_password">password</string>
    <string name="login_sign_in_button">вход</string>
    <string name="login_register_button">Регистрация</string>
    <string name="register_namePage">Регистрация пользователя</string>
    <string name="register_email">email</string>
    <string name="register_password">password</string>
    <string name="register_register_button">регистрация</string>
    <string name="register_clientName">Имя пользователя</string>
    <string name="mainPage_fab_icon">Добавить</string>
    <string name="gasItem_Id_title">ID:</string>
    <string name="gasItem_address_title">Адрес:</string>
    <string name="gasItem_position_title">Положение:</string>
    <string name="register_indicator_new_indicator">New Indicator</string>
    <string name="register_indicator_id">ID устройства</string>
    <string name="register_indicator_address">Адрес</string>
    <string name="register_indicator_position">Местоположение</string>
    <string name="register_indicator_password">Пароль</string>
    <string name="register_indicator_critical_value">Уровень оповещение</string>
    <string name="register_indicator_new_button">регистрация</string>
    <string name="register_indicator_exists_button">добавить</string>
    <string name="register_indicator_exists_label">Добавить существующий</string>
    <string name="register_indicator_new_label">Регистрация нового устройства</string>
    <string name="static_of_indicator_toolBar_Label">Static of indicator</string>
    <string name="staticIndicator_show_button">показать</string>
</resources>