<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10sp"
    android:background="@color/lightGrey"
    android:padding="8dp">

    <TextView
        android:id="@+id/gasItem_id_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gasItem_Id_title"
        android:textColor="@color/darkGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gasItem_id_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textColor="@color/darkGrey"
        app:layout_constraintStart_toEndOf="@id/gasItem_id_title"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="123456789" />

    <TextView
        android:id="@+id/gasItem_address_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/gasItem_address_title"
        android:textColor="@color/darkGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gasItem_id_title" />

    <TextView
        android:id="@+id/gasItem_address_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/darkGrey"
        app:layout_constraintStart_toEndOf="@id/gasItem_address_title"
        app:layout_constraintTop_toBottomOf="@id/gasItem_id_value"
        tools:text="123456789" />

    <TextView
        android:id="@+id/gasItem_position_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/gasItem_position_title"
        android:textColor="@color/darkGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gasItem_address_title" />

    <TextView
        android:id="@+id/gasItem_position_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/darkGrey"
        app:layout_constraintStart_toEndOf="@id/gasItem_position_title"
        app:layout_constraintTop_toBottomOf="@id/gasItem_address_value"
        tools:text="123456789" />

    <Button
        android:id="@+id/gasIndicator_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/darkGrey"
        android:onClick="getIndicatorStatic"
        android:padding="10dp"
        android:textColor="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="static" />


</androidx.constraintlayout.widget.ConstraintLayout>